# Cargo.toml

[package]
name = "embyapp"
version = "0.1.0"
description = "Unofficial Emby Desktop App - Free & Open Source"
authors = ["lucalapenna"]
edition = "2021"

[lib]
name = "embyapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Fast, highly parallel dev builds
[profile.dev]
opt-level = 0
debug = 1
lto = false
incremental = true
codegen-units = 256
panic = "unwind"

# Make all dependencies compile with many codegen units too
[profile.dev.package."*"]
opt-level = 0
codegen-units = 256

# Also speed up proc-macros and build scripts
[profile.dev.build-override]
opt-level = 0
codegen-units = 256
incremental = true

# Optimize for smaller binary size in release
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
